...
        bottomRight: Radius.circular(32),
      ),
      child: BlocBuilder<MainScreenBloc, MainScreenState>(
        builder: (context, state) {
          if (state is MainScreenLoading) {
            return Shimmer.fromColors(
              key: const ValueKey('shimmer'),
              baseColor: Colors.brown[300]!,
              highlightColor: Colors.brown[100]!,
              period: const Duration(milliseconds: 500),
              direction: ShimmerDirection.ttb,
              child: Container(
                decoration: BoxDecoration(
...
            );
          } else if (state is MainScreenLoaded) {
            final file = state.coffee.asFile;
            if (file.existsSync()) {
              return Image.file(
                file,
                key: const ValueKey('headerPhoto'),
                fit: BoxFit.fill,
              );
            } else {
              return Center(
                child: Text(
                  context.l10n.imageNotAvailableText,
...
