...
      mainAxisAlignment: MainAxisAlignment.spaceBetween,
      children: [
        Expanded(child: HeaderTitleWidget(animationValue: animationValue)),
        const SizedBox(width: 12),
        NewCoffeeButtonWidget(
          onTapButton: onTapButton,
          key: const ValueKey('newCoffeeButton'),
        ),
      ],
    );
  }
}

...
